examples/test/testpolicy12952.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12952
  namespace: namespace420
spec:
  podSelector:
    matchLabels:
      key5: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value4
          key6: value5
          key5: value41
      podSelector:
        matchLabels:
          key22: value46
          key37: value0
          key46: value49
